force-app/main/default/objects/sirenum__ProActiveContract__c/fields/Applicable_Job_Types__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Job_Types__c</fullName>
    <inlineHelpText>Which Job Types does this Contract apply to?</inlineHelpText>
    <label>Applicable Job Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Ad-Hoc</fullName>
            </value>
            <value>
                <fullName>Multi-Child/Young Person Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>