force-app/main/default/objects/sirenum__ProActiveContract__c/fields/Has_Linked_Contract__c.field-meta.xml
<CustomField>
    <fullName>Has_Linked_Contract__c</fullName>
    <formula>NOT(ISBLANK(Linked_Contract__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Linked Contract</label>
    <type>Checkbox</type>
</CustomField>