force-app/main/default/objects/sirenum__ProActiveContract__c/fields/Invoice_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Account that will be pushed onto Shifts and Perm Placements for invoicing when the Contract is related to them. This is typically the same Account as is on the Contract but can differ if, for example, there is a Self-Bill Account involved. In that instance add the Self-Bill Account here instead.</inlineHelpText>
    <label>Invoice Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WFM Contracts (Invoice Account)</relationshipLabel>
    <relationshipName>WFM_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>