force-app/main/default/objects/sirenum__ProActiveContract__c/fields/Invoice_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Billing_Contact__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>WFM Contracts (Invoice Contact)</relationshipLabel>
    <relationshipName>WFM_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>