force-app/main/default/objects/sirenum__ProActiveContract__c/fields/Is_Multi_CYP_Contract__c.field-meta.xml
<CustomField>
    <fullName>Is_Multi_CYP_Contract__c</fullName>
    <formula>INCLUDES(Applicable_Job_Types__c, &quot;Multi-Child/Young Person Contract&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Multi-CYP Contract</label>
    <type>Checkbox</type>
</CustomField>