force-app/main/default/objects/sirenum__ProActiveContract__c/fields/Linked_Contract__c.field-meta.xml
<CustomField>
    <fullName>Linked_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Contract</label>
    <referenceTo>sirenum__ProActiveContract__c</referenceTo>
    <relationshipLabel>Linked Child Contracts</relationshipLabel>
    <relationshipName>Linked_Child_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>