force-app/main/default/objects/sirenum__ProActiveContract__c/fields/Multi_Client_Job_Client_Contract__c.field-meta.xml
<CustomField>
    <fullName>Multi_Client_Job_Client_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To identify the Contract that will be set against the Job itself so that Job Types can be selected on the Job. Only one Contract can have this set to True and that Contract can only be assigned to the nominated Multi-Client Job Client</inlineHelpText>
    <label>Multi-Client Job Client Contract</label>
    <type>Checkbox</type>
</CustomField>