force-app/main/default/objects/sirenum__ProActiveContract__c/fields/Rate_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Rate_Agreements__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Agreements</label>
    <referenceTo>Rate_Agreements__c</referenceTo>
    <relationshipLabel>WFM Contracts</relationshipLabel>
    <relationshipName>WFM_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>